# loop-commander

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/: CI_QUICK_REFERENCE.md  PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
crates/intern-cli/: Cargo.toml
crates/intern-cli/src/: main.rs
crates/intern-config/: Cargo.toml
crates/intern-config/src/: lib.rs  registry.rs
crates/intern-core/: Cargo.toml
crates/intern-core/src/: builtin_agents.rs  lib.rs  prompt.rs
crates/intern-core/templates/: optimization_meta_prompt.txt
crates/intern-daemon/: Cargo.toml
crates/intern-daemon/src/: events.rs  health.rs  main.rs  prompt_handler.rs  server.rs
crates/intern-logger/: Cargo.toml
crates/intern-logger/src/: lib.rs
crates/intern-runner/: Cargo.toml
crates/intern-runner/src/: lib.rs  main.rs
crates/intern-scheduler/: Cargo.toml
crates/intern-scheduler/src/: lib.rs
crates/lc-cli/: Cargo.toml
crates/lc-cli/src/: main.rs
crates/lc-config/: Cargo.toml
crates/lc-config/src/: lib.rs  registry.rs
crates/lc-core/: Cargo.toml
crates/lc-core/src/: builtin_agents.rs  lib.rs  prompt.rs
crates/lc-daemon/: Cargo.toml
crates/lc-daemon/src/: main.rs  prompt_handler.rs  server.rs
crates/lc-logger/: Cargo.toml
crates/lc-logger/src/: lib.rs
crates/lc-runner/: Cargo.toml
crates/lc-runner/src/: lib.rs  main.rs
crates/lc-scheduler/: Cargo.toml
crates/lc-scheduler/src/: lib.rs
macos-app/: Package.swift  build-app.sh
macos-app/Intern/: InternApp.swift
macos-app/Intern/Models/: AgentEntry.swift  DaemonEvent.swift  DashboardMetrics.swift  ExecutionLog.swift  INTask.swift  PromptOptimizationResult.swift  Schedule.swift  SchedulePreset.swift  TaskRefineResult.swift  TaskStatus.swift
macos-app/Intern/Services/: DaemonClient+Editor.swift  DaemonClient+Optimizer.swift  DaemonClient.swift  DaemonMonitor.swift  EventStream.swift  NotificationManager.swift
macos-app/Intern/Styles/: Color+Intern.swift  Font+Intern.swift  INAnimations.swift  INButtonStyles.swift  INRadius.swift  INSpacing.swift  StatusConfig.swift
macos-app/Intern/Utilities/: Formatters.swift
macos-app/Intern/ViewModels/: DashboardViewModel.swift  EditorViewModel.swift  LogsViewModel.swift  PromptEditorViewModel.swift  PromptGeneratorViewModel.swift  PromptOptimizerViewModel.swift  TaskDetailViewModel.swift  TaskEditorViewModel.swift  TaskListViewModel.swift
macos-app/Intern/Views/: CommandImportView.swift  ContentView.swift  EditorView.swift  LogsView.swift  MarkdownPreviewView.swift  MetricsBarView.swift  PromptEditorPanel.swift  PromptGeneratorPanel.swift  PromptOptimizerPanel.swift  ScheduleBuilderView.swift  SidebarView.swift  TaskDetailView.swift  TaskEditorView.swift  TaskListView.swift
macos-app/Intern/Views/Components/: AgentPickerView.swift  CollapsibleSection.swift  DaemonBanner.swift  LogEntryRow.swift  MetricCard.swift  SparklineChart.swift  StatusBadge.swift  TagChip.swift  TaskRow.swift
macos-app/LoopCommander/: LoopCommanderApp.swift
macos-app/LoopCommander/Models/: LCTask.swift
macos-app/LoopCommander/Services/: DaemonClient.swift  DaemonMonitor.swift  EventStream.swift  NotificationManager.swift
macos-app/LoopCommander/ViewModels/: EditorViewModel.swift  PromptGeneratorViewModel.swift  PromptOptimizerViewModel.swift  TaskEditorViewModel.swift
macos-app/LoopCommander/Views/: ContentView.swift  EditorView.swift  MetricsBarView.swift  PromptGeneratorPanel.swift  PromptOptimizerPanel.swift  TaskEditorView.swift  TaskListView.swift
macos-app/LoopCommander/Views/Components/: AgentPickerView.swift  DaemonBanner.swift
macos-app/Tests/InternTests/: MockDaemonClient.swift  PromptEditorViewModelTests.swift  PromptOptimizerViewModelTests.swift  TaskRefineResultTests.swift  TestHelpers.swift
macos-app/Tests/LoopCommanderTests/: MockDaemonClient.swift  PromptOptimizerViewModelTests.swift  TestHelpers.swift
scripts/: generate-icon.py
