[workspace]
resolver = "2"
members = [
    "crates/intern-core",
    "crates/intern-config",
    "crates/intern-scheduler",
    "crates/intern-runner",
    "crates/intern-logger",
    "crates/intern-daemon",
    "crates/intern-cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
plist = "1"
