[package]
name = "intern-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intern"
path = "src/main.rs"

[dependencies]
intern-core = { path = "../intern-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
