[package]
name = "intern-config"
version = "0.1.2"
edition = "2021"

[dependencies]
intern-core = { path = "../intern-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
