[package]
name = "intern-runner"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "intern-runner"
path = "src/main.rs"

[dependencies]
intern-core = { path = "../intern-core" }
intern-config = { path = "../intern-config" }
intern-logger = { path = "../intern-logger" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
