[package]
name = "intern-scheduler"
version = "0.1.1"
edition = "2021"

[dependencies]
intern-core = { path = "../intern-core" }
intern-config = { path = "../intern-config" }
plist = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
cron = "0.12"

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
