[package]
name = "lc-cli"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "lc"
path = "src/main.rs"

[dependencies]
lc-core = { path = "../lc-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
