[package]
name = "lc-config"
version = "0.2.1"
edition = "2021"

[dependencies]
lc-core = { path = "../lc-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
