[package]
name = "lc-daemon"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "loop-commander"
path = "src/main.rs"

[dependencies]
lc-core = { path = "../lc-core" }
lc-config = { path = "../lc-config" }
lc-scheduler = { path = "../lc-scheduler" }
lc-logger = { path = "../lc-logger" }
lc-runner = { path = "../lc-runner" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
