[package]
name = "lc-logger"
version = "0.2.0"
edition = "2021"

[dependencies]
lc-core = { path = "../lc-core" }
rusqlite = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
