[package]
name = "lc-runner"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "lc-runner"
path = "src/main.rs"

[dependencies]
lc-core = { path = "../lc-core" }
lc-config = { path = "../lc-config" }
lc-logger = { path = "../lc-logger" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
