[package]
name = "lc-scheduler"
version = "0.2.0"
edition = "2021"

[dependencies]
lc-core = { path = "../lc-core" }
lc-config = { path = "../lc-config" }
plist = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
cron = "0.12"

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
